--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -1,17 +1,26 @@
+<!--
+  ~ Copyright (c) 2021 Lenny Angst. All rights reserved.
+  ~ For more information about the license read the LICENSE file at the root of this repo.
+  ~ Written for Project: openclass
+  ~ Last modified: 3/30/21, 2:42 PM
+  -->
+
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="https://kit.fontawesome.com/059626593b.js" crossorigin="anonymous"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body class="dark:bg-gray-900 dark:text-gray-50">
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</head>
+<body class="dark:bg-gray-900 dark:text-gray-50">
+<noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
