Fix is in class checker

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -2,7 +2,7 @@
   ~ Copyright (c) 2021 Lenny Angst. All rights reserved.
   ~ For more information about the license read the LICENSE file at the root of this repo.
   ~ Written for Project: openclass
-  ~ Last modified: 3/30/21, 2:42 PM
+  ~ Last modified: 4/13/21, 11:23 AM
   -->
 
 <!DOCTYPE html>
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/059626593b.js" crossorigin="anonymous"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<body class="dark:bg-gray-900 dark:text-gray-50">
+<body class="dark:bg-gray-900 dark:text-gray-50 min-h-screen">
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
